# libmspack

./: README.md
cabextract/: .gitignore  AUTHORS  CMakeLists.txt  CMakeOptions.txt  ChangeLog  Makefile.am  NEWS  README  README.md  amibuild.sh  autogen.sh  cabextract.cygport  cabextract.spec.in  cleanup.sh  config.h.in.cmake  configure.ac  distcheck.sh  fnmatch.c  fnmatch_.h  getopt.c  getopt.h  getopt1.c  md5.c  rebuild.sh  solbuild.sh
cabextract/cmake/: FindICONV.cmake  FindMSPack.cmake
cabextract/cygwin/: 1.8-external.patch  Makefile  README  cabextract-1.6-1.cygport  cabextract-1.7-1.cygport  cabextract.cygport  setup.hint
cabextract/debian/: README.Debian  copyright
cabextract/doc/: cabextract.1  magic  wince_cab_format.html
cabextract/doc/ja/: cabextract.1
cabextract/mspack/: .gitignore  CMakeLists.txt  ChangeLog  cab.h  cabd.c  lzx.h  lzxd.c  macros.h  mspack.h  mszip.h  mszipd.c  qtm.h  qtmd.c  readbits.h  readhuff.h  system.c  system.h
cabextract/src/: .gitignore  cabextract.c  cabinfo.c  cabsplit  wince_info  wince_rename
cabextract/tags/cabextract-1.0/: Makefile.am  NEWS  cabextract.spec.in  configure.ac
cabextract/tags/cabextract-1.0/debian/: changelog  control
cabextract/tags/cabextract-1.0/doc/: cabextract.1  wince_cab_format.html
cabextract/tags/cabextract-1.0/src/: cabextract.c
cabextract/tags/cabextract-1.1/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  cleanup.sh  configure.ac
cabextract/tags/cabextract-1.1/debian/: rules
cabextract/tags/cabextract-1.1/src/: wince_rename
cabextract/tags/cabextract-1.2/: ChangeLog  NEWS  cabextract.spec.in  cleanup.sh  configure.ac  getopt1.c  import.sh  md5.c
cabextract/tags/cabextract-1.2/src/: cabextract.c  wince_info
cabextract/tags/cabextract-1.2/test/: Makefile
cabextract/tags/cabextract-1.3/: ChangeLog  NEWS  TODO  configure.ac
cabextract/tags/cabextract-1.3/debian/: copyright
cabextract/tags/cabextract-1.3/mspack/: cab.h  lzxd.c
cabextract/tags/cabextract-1.3/src/: cabextract.c  wince_info
cabextract/tags/cabextract-1.4/: amibuild.sh  configure.ac  solbuild.sh
cabextract/tags/cabextract-1.4/debian/: dirs
cabextract/tags/cabextract-1.5/: ChangeLog  Makefile.am  acinclude.m4  configure.ac  getopt.c
cabextract/test/: .gitignore  CMakeLists.txt  Makefile  bugs.test  case-ascii.test  case-utf8.test  case.test  dir.test  dirwalk-vulns.cab  dirwalk-vulns.test  encoding-koi8.cab  encoding-latin1.cab  encoding-sjis.cab  encoding.test  expected.txt  filenames.pl  huge-lzx15.cab  huge-lzx21.cab  large-files.test  mixed.test  search.cab  search.test  simple.test  split-3.cab  split-4.cab  split.test  symlinks.test  testcase.in  utf8-stresstest.test
cabextract/test/bugs/: README  cve-2010-2801-qtm-flush.cab
cabextract/test/cabs/: case-ascii.cab  case-ascii.txt  case-utf8.cab  case-utf8.txt  case.cab  case.txt  dir.cab  dirwalk-vulns.txt  encoding-koi8.cab  encoding-koi8.txt  encoding-sjis.txt  filename-cabs.sh  large-cab.pl  split-1.cab  split-2.cab  split-5.cab  utf8-stresstest.cab  utf8-stresstest.txt
cabextract/test/expected/: case.list  dirwalk-vulns.list  encoding-koi8.list  encoding-latin1.list  encoding-sjis.list  huge-lzx15.test  huge-lzx21.test  huge-mszip.test  large-files.test  large-search.list  mixed.test  search.list  search.test  simple.list  simple.test  split-1.test  split-2.test  split-3.test  split-4.test  split-5.test  utf8-stresstest.list
cabextract/test/scripts/: check-results.sh  encoding-latin1.txt  filenames.pl  large-files-cab.cab  large-files.sh  split-cabs.sh
cabextract/trunk/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  amibuild.sh  cleanup.sh  configure.ac  import.sh  rebuild.sh
cabextract/trunk/cygwin/: Makefile  README  cabextract-1.6-1.cygport  setup.hint
cabextract/trunk/doc/: magic  wince_cab_format.html
cabextract/trunk/mspack/: cabd.c  readhuff.h
cabextract/trunk/src/: cabextract.c  cabinfo.c  wince_info  wince_rename
cabextract/trunk/test/: Makefile  dirwalk.cab
libmspack/: .gitignore  AUTHORS  CMakeLists.txt  CMakeOptions.txt  ChangeLog  Makefile.am  README  README.md  autogen.sh  cleanup.sh  config.h.in.cmake  configure.ac  libmspack.cygport  rebuild.sh
libmspack/cmake/: compiletest_mkdir.c
libmspack/cygwin/: 0.4-no-undefined.patch  0.8-testfile.patch  libmspack.cygport
libmspack/doc/: .gitignore  CMakeLists.txt  Makefile.in
libmspack/examples/: .gitignore  CMakeLists.txt  cabd_memory.c  cabrip.c  chmextract.c  error.h  msexpand.c  multifh.c  oabextract.c
libmspack/mspack/: CMakeLists.txt  cab.h  cabd.c  chmc.c  chmd.c  debug.c  kwajd.c  lzxd.c  macros.h  mspack-version.h.in  mspack.h  mszipd.c  oabd.c  qtmd.c  readbits.h  system.c  system.h  szddd.c  version.rc.in
libmspack/src/: .gitignore  cabrip.c  chmextract.c
libmspack/tags/libmspack-0.0.20060920alpha/: Makefile.am  README  TODO  cleanup.sh
libmspack/tags/libmspack-0.2alpha/: ChangeLog
libmspack/tags/libmspack-0.3alpha/: ChangeLog  Makefile.am  README  configure.ac
libmspack/tags/libmspack-0.4alpha/: ChangeLog  README
libmspack/test/: .gitignore  CMakeLists.txt  cabd_compare  cabd_md5.c  cabd_test.c  chmd_compare  chmd_find.c  chmd_md5.c  chmd_order.c  chmd_test.c  chminfo.c  kwajd_test.c  md5.c  md5.h  md5_fh.h  msextract_md5
libmspack/test/fuzzing/: README.md  extract_fuzzer.c  oss_fuzz_build.sh
libmspack/trunk/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  README  TODO  cleanup.sh  configure.ac  rebuild.sh
libmspack/trunk/doc/: .cvsignore  Doxyfile  Doxyfile.in  Makefile  Makefile.in  szdd_kwaj_format.html
libmspack/trunk/mspack/: cab.h  cabc.c  cabd.c  chm.h  chmc.c  chmd.c  debug.c  des.h  hlp.h  hlpc.c  hlpd.c  kwaj.h  kwajc.c  kwajd.c  lit.h  litc.c  litd.c  lzss.h  lzssd.c  lzx.h  lzxc.c  lzxd.c  mspack.h  mszip.h  mszipc.c  mszipd.c  oabd.c  qtm.h  qtmc.c  qtmd.c  sha.h  system.c  system.h  szdd.h  szddc.c  szddd.c
libmspack/trunk/test/: .cvsignore  cabd_md5.c  cabd_memory.c  cabd_test.c  cabrip.c  chmd_md5.c  chminfo.c  chmx.c  expand.c  md5.c  md5_fh.h  msdecompile_md5  msexpand_md5  multifh.c
(+66 files in other folders)
